20150627:
    ATTENTION: recommended use with usb-modeswitch program package version
    >= 2.2.2 due to extended parameter PantechMode (affects 2 devices, see
    also REFERENCE);
    Added devices: Dymo LabelManager 420P, MediaTek/Medion S4222 and probably
    others, Pantech/Verizon UML295, Vodafone (Huawei) R205, Vodafone (Huawei)
    R215, Huawei E3372, Huawei E3372s-153, Huawei E5377, Huawei/Vodafone R226,
    Spreadtrum SC7702, D-Link DWM-221 B1, ZTE MF90 Mobile Hotspot; some new
    target IDs added to existing device configs; modified the catch-all Huawei
    udev rule to exclude Android smartphones
20150115:
    Added devices: Aiko 81D, Alcatel-Lucent ABS-T920, Alcatel X602D,
    Amoi H-01, Amoi H-02, D-Link DWM-157 B1, D-Link DWM-221, D-Link
    DWM-156 A8, D-Link DWM-167 A1, Huawei ETS1201, Intex 3.5G, Intex Speed
    3G v7.2, Linktop LW272/LW273 (BSNL Teracom), Onda MV815U, Onda MO835UP,
    Onda MDC655, Onda MDC655 Variant, Quanta MU-Q101, StrongRising STD808,
    Telewell TW-LTE 4G, TechFaith Venus VT-18, TechFaith BSNL Capitel,
    TechFaith FlyingLARK46, Tlaytech TEU800, TU930, IVIO IV-2010u, Viettel
    VT100, Wisue W340, Zoom 3G, ZTE / Vodafone K4607-Z, ZTE / Vodafone K4201,
    ZTE MF730, ZTE MF710M Variants, several modems with unknown names (vendor
    ID 0x257a); many minor corrections and additions to existing
    configurations. Thanks to Lars Melin once more for extended research and
    collecting!
20140529:
    ATTENTION: requires usb-modeswitch version >= 2.2.0 due to new para-
    meter HuaweiNewMode (further reducing config file size);
    Added devices: Nexperia TM TD-SCDMA, Sunplus SU-3200U, Olivetti
    Olicard 160 and Olicard 500, Ericsson F5521gw, Sony Ericsson EC400,
    Huawei EC168, Huawei/Vod. W5101 Router, Huawei E3531, Huawei E3131
    (Variant), Novatel MiFi 4082, Emobile D12LC, Emobile D21LC, Prolink
    PCM100, Titan 3.5G, several nameless ZTE modems, several minor device