@@ -1,5 +1,5 @@
 # MediaTek Wimax USB Card
 TargetVendor=0x0e8d
-TargetProduct=0x7118
+TargetProductList="7115,7118"
 StandardEject=1
 NoDriverLoading=1
