@@ -1,0 +1,4 @@
+# Huawei E327s-150 (Variant)
+TargetVendor=0x12d1
+TargetProduct=0x1598
+HuaweiNewMode=1
