@@ -1,0 +1,4 @@
+# Huawei E3531s-2, E3131 (Variant)
+TargetVendor=0x12d1
+TargetProductList="15b1,15b3"
+HuaweiNewMode=1
