@@ -1,0 +1,4 @@
+# Huawei E3131 (Variant)
+TargetVendor=0x12d1
+TargetProduct=0x15d1
+HuaweiNewMode=1
