@@ -1,0 +1,4 @@
+# Huawei E3531 (Variant)
+TargetVendor=0x12d1
+TargetProduct=0x15d3
+HuaweiNewMode=1
