@@ -1,0 +1,2 @@
+# Novatel U620L
+Configuration=2
