@@ -1,0 +1,4 @@
+# ZTE MF820s, MF832s
+TargetVendor=0x19d2
+TargetProduct=0x0199
+StandardEject=1
