@@ -1,0 +1,4 @@
+# ZTE MF195E
+TargetVendor= 0x19d2
+TargetProduct=0x1582
+StandardEject=1
